--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pydantic==2.10.4
 pydantic_core==2.27.2
 python-dotenv==1.0.1
 python-multipart==0.0.20
+requests==2.31.0  # ここを追加
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
