--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,2 @@
 DATABASE_URL=postgresql://postgres.yrkpzkfnogjtaehscqnd:weatherapp000cassidy@aws-0-ap-northeast-1.pooler.supabase.com:6543/postgres
-WEATHER_API_KEY=your_openweather_api_key_here
+WEATHER_API_KEY=https://api.open-meteo.com/v1/forecast
